# jobworkerp-client-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  build.rs
.github/workflows/: ci.yaml  release-client.yaml
docs/: function-set-yaml.md  manifest-yaml.md  worker-yaml.md
src/: built_in.rs  client.rs  command.rs  display.rs  error.rs  grpc.rs  lib.rs  plugins.rs  proto.rs
src/client/: function_set_yaml.rs  helper.rs  manifest_yaml.rs  worker_yaml.rs  wrapper.rs  yaml_common.rs
src/command/: function.rs  function_set.rs  job.rs  job_result.rs  job_status.rs  manifest.rs  runner.rs  tool.rs  worker.rs  worker_instance.rs  worker_schema.rs
src/command/function/: display.rs
src/command/function_set/: display.rs
src/command/job/: display.rs
src/command/job_result/: display.rs
src/command/job_status/: display.rs
src/command/runner/: display.rs
src/command/worker/: display.rs
src/command/worker_instance/: display.rs
src/display/: format.rs  test.rs  utils.rs  visualizer.rs
