[package]
name = "jobworkerp-client"
version = "0.10.0"
authors = ["sutr-app"]
edition = "2024"

[[bin]]
name = "jobworkerp-client"
path = "src/bin/command.rs"

[dependencies]

anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
command-utils = { git = "https://github.com/sutr-app/command-utils.git", branch = "main" }
futures = "0.3"
once_cell = "1"
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
prost-reflect-build = "0.14"
# force ring. ref. https://github.com/rustls/rustls/issues/1938
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tonic = { version = "0.13", features = ["tls-ring", "tls-webpki-roots"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] }
