[package]
name = "jobworkerp-client"
version = "0.14.1"
authors = ["sutr-app"]
edition = "2021"

[[bin]]
name = "jobworkerp-client"
path = "src/bin/command.rs"

[dependencies]

anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
command-utils = { git = "https://github.com/sutr-app/command-utils.git", branch = "main" }
infra-utils = { git = "https://github.com/sutr-app/infra-utils.git", branch = "sqlx-0.7" }
dotenvy = { version = "0.15" }
futures = "0.3"
once_cell = "1"
opentelemetry = { version = "0.29" }
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.15", features = ["serde"] }
prost-reflect-build = "0.15"
# force ring. ref. https://github.com/rustls/rustls/issues/1938
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
rand = "0.9"
schemars = { version = "1.0.0-alpha.17", features = ["chrono04"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = { version = "2" }
tonic = { version = "0.13", features = ["tls-ring", "tls-webpki-roots"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "v7"] }

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] }
